[package]
name = "tdjson-sys"
version = "0.1.5"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
description = "TDLIB Json Client Rust FFI Bindings"
documentation = "https://docs.rs/crate/tdjson-sys"
repository = "https://github.com/mersinvald/tdjson-sys"
license = "MIT"
keywords = ["telegram", "tdlib", "bindings", "ffi", "unsafe"]
categories = ["external-ffi-bindings"]


[build-dependencies]
bindgen = "0.26.3"
